kubernetes/kuberentes.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: nexten-demo
    app.kubernetes.io/version: 0.0.1-SNAPSHOT
  name: nexten-demo
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: nexten-demo
    app.kubernetes.io/version: 0.0.1-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    io.nexten/commit-id: d04931defb33e83110f0fcbc4f3bcf14c3e9e94b
    io.nexten/vcs-url: https://github.com/cirix/nexten-demo.git
  labels:
    app.kubernetes.io/name: nexten-demo
    app.kubernetes.io/version: 0.0.1-SNAPSHOT
  name: nexten-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: nexten-demo
      app.kubernetes.io/version: 0.0.1-SNAPSHOT
  template:
    metadata:
      annotations:
        io.nexten/commit-id: d04931defb33e83110f0fcbc4f3bcf14c3e9e94b
        io.nexten/vcs-url: https://github.com/cirix/nexten-demo.git
      labels:
        app.kubernetes.io/name: nexten-demo
        app.kubernetes.io/version: 0.0.1-SNAPSHOT
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: cirix/nexten-demo:0.0.1-SNAPSHOT
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/info
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: nexten-demo
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
